# LeanEvolve

./: .gitignore  InterClosureExercise.lean  README.md  Taskfile.yaml  generation.py  main.py  mutations.json  pyproject.toml  target_files.txt  target_files_test.txt  tear_down.sh  warm_up_env_clean.sh
data/: clopen_recursive_conjecture.jsonl  clopen_recursive_conjecture_eval_result.jsonl  o1_conjecture.jsonl  o1_conjecture_eval_result.jsonl  o3mini_conjecture.jsonl  o3mini_conjecture_eval_result.jsonl
output/: grpo_problem.jsonl
src/: __init__.py  constant.py  print_result.py
src/application/: lean_processor.py  map_archive.py  map_config.py  mutation_utils.py  pipeline.py  program_db.py  sampler.py  test.py
src/application/evaluator/: KiminaPool.py  __init__.py  evaluator.py  prover.py  repository.py
src/application/fitness/: fitness_evaluator.py  llm_fitness_evaluator.py  prover.py
src/application/generator/: __init__.py  context_maker.py  converter.py  generator.py  head_maker.py  llm.py  prompt_maker.py  repository.py
src/entity/: conjecture.py  conjecture_eval_result.py  lean_response.py  mathlib.py  mutation.py  prompt.py
tests/: target.txt
